--- a/index.html
+++ b/index.html
@@ -4,103 +4,30 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Block site</title>
-  <link href="./styles/styles.scss" rel="stylesheet" type="text/css" />
+  <title>Curry Cafe</title>
+  <link href="styles/curry.scss" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
   <div class="container">
-    <header>
-      <div class="nav">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-      <div class="nav-bar">
-        <span></span>
-      </div>
-    </header>
-    <div class="black">
-      <span>CHANGES</span>
-      <span>CHANGES</span>
-      <span>CHANGES</span>
-      <span>CHANGES</span>
-      <span>JULY &nbsp;4-5</span>
+    <div class="bar"><span>CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG!
+        CURRY CAFE! &nbsp;&nbsp;CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG!
+        CURRY CAFE! CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG! CURRY CAFE!
+        &nbsp;&nbsp;CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG! CURRY
+        CAFE!</span></div>
+    <div class="bar">LOCATIONS+MENU+SHOP</div>
+    <div class="main">
+      <span>カレーカフェ</span>
+      <span>CURRY <br> CAFE</span>
     </div>
-    <div class="purple"></div>
-    <div class="red">
-      <span>ABOUT</span>
-      <span>CONTACT</span>
-      <span>VENUES</span>
-      <span>FAQ</span>
-      <span>PARTNERS</span>
-    </div>
-    <div class="white"></div>
-    <div class="yellow">TICKETS</div>
-    <div class="grey left">
-      <span class="category">SPEAKERS</span>
-      <div class="list">
-        <span>ABBY GEE</span>
-        <span>ALEX YABSLEY</span>
-        <span>ALEX ZACCARIA</span>
-        <span>ALLEGRA CALDWELL</span>
-        <span>BEATRICE</span>
-        <span class="color">BILL WILSON [US]</span>
-        <span>BRIGID DIXON</span>
-        <span>CARLY JAMES [US]</span>
-        <span>CHERIE HU [US]</span>
-        <span>CHRIS MYLRAE</span>
-        <span>CHRISTIE MORGAN</span>
-        <span>CHRISTOPHER</span>
-        <span>MURATORE [US]</span>
-        <span>DANIELLE LEVY [US]</span>
-        <span>DAVE "DIZZ1" NORRIS</span>
-        <span>DAVID BENGE [NX]</span>
-        <span>DAVID RAY</span>
-        <span>GARETH SMITH [US]</span>
-        <span>JENN PELLY [US]</span>
-        <span>JOSEPH EDWARD</span>
-        <span>KEYES [US]</span>
-        <span>KAT DOPPER</span>
-        <span>KATE DUNCAN</span>
-        <span>LORRAE MCKENNA</span>
-        <span>MARIHUZKA</span>
-        <span>CORNELIUS</span>
-        <span>MARKELL CASEY [US]</span>
-      </div>
-    </div>
-    <div class="grey right">
-      <span class="category">ARTISTS</span>
-      <div class="list">
-        <span>808S AND GREATEST</span>
-        <span>HITS</span>
-        <span>ACTIVITIES OF DAILY</span>
-        <span>LIVING</span>
-        <span>ALEXANDER BIGGS</span>
-        <span>ALICE SKYE</span>
-        <span>AUSMUTEANTS</span>
-        <span>BABY</span>
-        <span>BENCH PRESS</span>
-        <span>BIRDZ</span>
-        <span>BONES AND JONES</span>
-        <span>CABLE TIES</span>
-        <span>CAHPEL</span>
-        <span>CIVIC</span>
-        <span>CLEOPOLD</span>
-        <span>DARCY BAYLIS</span>
-        <span>DARK FAIR</span>
-        <span>DIANAS</span>
-        <span>DIET</span>
-        <span>DRMNGNOW</span>
-        <span>EAST BRUCSWICK ALL</span>
-        <span>GIRLS CHOIR</span>
-        <span>EILISH GILLIGAN</span>
-        <span>ELIZABETH</span>
-        <span>EVAN KLAR</span>
-        <span>EVELYN IDA MORRIS</span>
-        <span>FRASER A. GORMAN</span>
-      </div>
-    </div>
+    <div class="bar">* ORDER T-A *</div>
+    <div class="bar">SPICY NEWSLETTER 🍘</div>
+    <div class="bar">* RESERVATIONS *</div>
+    <div class="bar"><span>CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG!
+        CURRY CAFE! &nbsp;&nbsp;CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG!
+        CURRY CAFE! CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG! CURRY CAFE!
+        &nbsp;&nbsp;CURRY CAFE! CURRY CAFE! FLEMINGTON & NORTHCOTE! NUMBER ONE BEST QUALITY! VEG & NON. VEG! CURRY
+        CAFE!</span> </div>
   </div>
 </body>
 
